--- a/pkg/templates/packages.lua.tmpl
+++ b/pkg/templates/packages.lua.tmpl
@@ -10,12 +10,12 @@ function M.setup()
     "folke/lazy.nvim",
 
     -- Your custom plugin.
-    {
-      "{{.CustomPlugin}}",
-      config = function()
-        require('{{.PackageName}}').setup()
-      end
-    },
+    -- {
+    --   "{{.ConfigurationPlugin}}",
+    --   config = function()
+    --     require('{{.PackageName}}').setup()
+    --   end
+    -- },
 
     -- Add more plugins here.
     -- E.g., "nvim-telescope/telescope.nvim"
